XML XSD Schema changes to include associations
SVN-Revision: 466